# CrisisDesk-AI-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  oldREADME.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/routes/: auth.py  health.py  reports.py
app/core/: config.py  rate_limit.py  response.py  security.py
app/db/: init_db.py  session.py
app/models/: admin.py  report.py
app/schemas/: auth.py  report.py
app/services/: classification.py  duplicates.py  geocoding.py  report_service.py  translation.py  weather.py
app/utils/: ids.py  similarity.py
docs/: architecture.md  openapi.json
tests/: test_admin_and_stats.py  test_reports.py
tests/unit/: test_classification_service.py  test_duplicates_service.py  test_report_service.py  test_unit_smoke.py
